@@ -564,7 +564,7 @@ Completion is available."
   (let ((file (ada-find-src-file-in-dir filename)))
     (if file
 	(find-file file)
-      (error "%s" (concat filename " not found in src_dir")))))
+      (error "%s not found in src_dir" filename))))
 
 
 ;; ----- Utilities -------------------------------------------------
@@ -1722,8 +1722,8 @@ Information is extracted from the ali file."
 	  ;; No more idea to find the declaration.  Give up
 	  (progn
 	    (kill-buffer ali-buffer)
-	    (error "%s" (concat "No declaration of " (ada-name-of identlist)
-			   " found."))
+
+	    (error "No declaration of %s found." (ada-name-of identlist))
 	    )))
       )
 
@@ -1808,10 +1808,8 @@ This function is disabled for operators, and only works for identifiers."
 	   ;; none => error
 	   ((= len 0)
 	    (kill-buffer (current-buffer))
-	    (error "%s" (concat "No declaration of "
-			   (ada-name-of identlist)
-			   " recorded in .ali file")))
-
+	    (error "No declaration of %s recorded in .ali file"
+		   (ada-name-of identlist)))
 	   ;; one => should be the right one
 	   ((= len 1)
 	    (goto-line (caar declist)))
@@ -2011,7 +2009,7 @@ the declaration and documentation of the subprograms one is using."
 				  (string-to-number (nth 2 (car list)))
 				  identlist
 				  other-frame)
-	(error "%s" (concat (caar list) " not found in src_dir")))
+	(error "%s not found in src_dir"  (caar list)))
       (message "This is only a (good) guess at the cross-reference.")
       )
 
